Changes in activity_quiz_practise.xml(Added text color  to the id tv_question)

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,5 +12,6 @@
 
     <color name="nano_green">#61d800</color>
     <color name="light_red">#F44336</color>
+    <color name="light_black">#363A43</color>
 
 </resources>
