--- a/app/src/main/res/layout/activity_quiz_practise.xml
+++ b/app/src/main/res/layout/activity_quiz_practise.xml
@@ -23,8 +23,8 @@
             android:id="@+id/tv_question"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="which country does this flag belongs to"
-            android:textColor="@color/purple_500"
+            android:text="@string/which_country_does_this_flag_belongs_to"
+            android:textColor="@color/light_black"
             android:gravity="center"
             android:layout_margin="16dp"
             android:textSize="22sp" />
@@ -124,6 +124,7 @@
             android:layout_margin="10dp"
             android:padding="15dp"
             android:textStyle="bold"
+            android:textColor="@color/white"
             android:textSize="18sp"
             android:background="@color/purple_500"
             android:text="@string/submit" />
